bug: fixes missing macros functionality

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,14 +28,7 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# This only worked with a NEWER verion of bash. (OSX, I had to run brew install bash to update bash)
-# https://github.com/fabioluciano/tmux-tokyo-night/issues/10#issuecomment-2068541210
-set -g @plugin 'fabioluciano/tmux-tokyo-night' 
-set -g @theme_variation 'storm'
-set -g @theme_plugin_datetime_icon '🗓️'
-
-# Good alternative if you wanna switch it up.
-# Examples: https://github.com/jimeh/tmux-themepack/tree/master
-# set -g @themepack 'powerline/default/cyan'
+# tokyo-night-theme
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
 run '~/.tmux/plugins/tpm/tpm'
