--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+# True color settings
 set -g default-terminal "screen-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 unbind %
 bind | split-window -h 
