update the readme with todos

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,5 +32,6 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # tokyo-night-theme
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @tokyo-night-tmux_time_format 12H
 
 run '~/.tmux/plugins/tpm/tpm'
