chore: update ideavimrc way better 🚀

--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -121,8 +121,8 @@ automatically-unhide-macos-hidden-apps = false
     alt-b = 'Browser'
     alt-t = 'Terminal'
     alt-r = 'Rider'
-    alt-u = 'workspace U'
-    alt-v = 'workspace V'
+    alt-a = 'Application'
+    alt-f = 'Finder'
     alt-w = 'workspace W'
     alt-x = 'workspace X'
     alt-y = 'workspace Y'
